tests/paczka2/big_fuzzy/97091436.err
Error in line 4: Q5Lj6 S7 36,6
Error in line 15: FRHnyK6cN2 S7 -1,9
Error in line 1: At7L5tr A853 46,5
Error in line 5: Q5Lj6 A636 42,7
Error in line 12: FRHnyK6cN2 S7 8,8
Error in line 31: vU49Vc4ECz A853 11,0
Error in line 38: vU49Vc4ECz A636 71,6
Error in line 42: vU49Vc4ECz S7 71,8
Error in line 49: FRHnyK6cN2 S7 11,5
Error in line 39: A636 A771 67,2
Error in line 65: Q5Lj6 S7 50,2
Error in line 70: vU49Vc4ECz A636 40,13
Error in line 54: vU49Vc4ECz A771 107,6
Error in line 64: A636 A853 11,3
Error in line 80: FRHnyK6cN2 A636 41,6
Error in line 93: Q5Lj6 A636 39,6
Error in line 109: Q5Lj6 A636 72,3
Error in line 104: vU49Vc4ECz A636 157,2
Error in line 113: Q5Lj6 A771 55,2
Error in line 143: A636 A636 -3,3
Error in line 139: vU49Vc4ECz S7 413,2
Error in line 157: OULd1MgV A853 23,5
Error in line 164: OULd1MgV S7 -3,8
Error in line 165: vU49Vc4ECz A771 45,6
Error in line 168: OULd1MgV S7 34,9
Error in line 182: vU49Vc4ECz S7 85,5
Error in line 142: A636 A636 53,7
Error in line 198: OULdDMgV A77D D04,8
Error in line 210: A636 A771 69,7
Error in line 213: vU49Vc4ECz A771 12,6
Error in line 193: OULd1MgV A771 22,5
Error in line 224: OULd1MgV A636 62,3
Error in line 230: At7L5tr S7 28,0
Error in line 229: FRHnyK6cN2 A636 23,7
